--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,7 +1,11 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
-}
+  padding: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+} 
 
 .logo {
   font-size: 48px;
@@ -14,6 +18,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  gap: 16px;
 }
 
 a {
