--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,16 +1,36 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
   width: 100px;
   height: 100px;
+
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
+
+.container{
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.content{
+  max-width: 200px;
+}
+
+.text {
+  align-self: auto;
+  text-align: center;
+}
+
+
 
 /* do not edit this footer */
 .footer {
